Enhance routing and navigation in frontend; add protected and public routes, integrate react-router-dom, and update document creation flow. Update backend schema to include owner fields and modify package scripts for database management.

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json",
+    "studio": "yarn drizzle-kit studio",
     "start": "node dist/server.js",
-    "db:generate": "drizzle-kit generate --config=drizzle.config.ts",
-    "db:migrate": "drizzle-kit migrate --config=drizzle.config.ts"
+    "db:repair": "yarn drizzle-kit generate  --config=drizzle.config.ts && yarn drizzle-kit migrate --config=drizzle.config.ts && yarn drizzle-kit push && yarn drizzle-kit pull && yarn drizzle-kit check"
   },
   "keywords": [],
   "author": "",
