--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/rtc_docs
 REDIS_URL=redis://localhost:6379
+FRONTEND_URL=http://localhost:5173
