Update Redis configuration and enhance cursor management for collaborative editing. Modify environment variables for development and production, implement Redis password protection, and adjust cursor data structure to include optional properties. Refactor frontend components to support new cursor features and persist user data in localStorage.

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,11 @@
+# Development
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/rtc_docs
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://:redispass:localhost:6379/0
+
+
 FRONTEND_URL=http://localhost:5173
+
+
+# Production
+# DATABASE_URL=postgresql://rtc_docs_user:1FsgcYZ1K3wQ5j5MSYvS5hw8x4ZmdRPv@dpg-d2sn0iggjchc73aic0cg-a/rtc_docs
+# REDIS_URL=redis://red-d2sn1sur433s73frrov0:6379
