--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -19,7 +19,8 @@ services:
 
   redis:
     image: redis:7
-    command: ["redis-server", "--appendonly", "yes"]
+    command:
+      ["redis-server", "--appendonly", "yes", "--requirepass", "redispass"]
     ports:
       - "6379:6379"
     healthcheck:
