Refactor backend configuration for Docker and environment variables. Update database and Redis settings in .env file, enhance docker-compose.yml for dynamic configuration, and implement connection checks for PostgreSQL and Redis in server.ts. Remove deprecated Redis connection file and adjust related imports across services. Update package.json scripts for Docker management.

--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,25 @@
-# Development
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/rtc_docs
-REDIS_URL=redis://:redispass:localhost:6379/0
-
-
+# Server Configuration
+PORT=4000
+NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
+# Local Database Configuration (for Docker)
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=rtc_docs
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_IS_SSL=false
 
-# Production
-# DATABASE_URL=postgresql://rtc_docs_user:1FsgcYZ1K3wQ5j5MSYvS5hw8x4ZmdRPv@dpg-d2sn0iggjchc73aic0cg-a/rtc_docs
-# REDIS_URL=redis://red-d2sn1sur433s73frrov0:6379
+
+REDIS_URL=redis://redisuser:redispass123@localhost:6379/0
+
+# Local Redis Configuration (for Docker)
+REDIS_HOSTNAME=localhost
+REDIS_PORT=6379
+REDIS_USERNAME=redisuser
+REDIS_PASSWORD=redispass123
+REDIS_DB=0
+REDIS_IS_TLS=false
+
+DB_IS_SSL=false
