--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,33 +4,50 @@ services:
   postgres:
     image: postgres:16
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: rtc_docs
+      POSTGRES_USER: ${DB_USERNAME:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
+      POSTGRES_DB: ${DB_NAME:-rtc_docs}
     ports:
-      - "5432:5432"
+      - "${DB_PORT:-5432}:5432"
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres"]
+      test: ["CMD", "pg_isready", "-U", "${DB_USERNAME:-postgres}"]
       interval: 5s
       timeout: 3s
       retries: 10
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - app-network
 
   redis:
-    image: redis:7
-    command:
-      ["redis-server", "--appendonly", "yes", "--requirepass", "redispass"]
+    image: redis:8
+    command: redis-server /usr/local/etc/redis/redis.conf
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT:-6379}:6379"
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test:
+        [
+          "CMD",
+          "redis-cli",
+          "-u",
+          "redis://${REDIS_USERNAME:-redisuser}:${REDIS_PASSWORD:-redispass123}@localhost:6379",
+          "ping",
+        ]
       interval: 5s
       timeout: 3s
       retries: 10
     volumes:
       - redisdata:/data
+      - ./redis.conf:/usr/local/etc/redis/redis.conf:ro
+    networks:
+      - app-network
 
 volumes:
   pgdata:
+    driver: local
   redisdata:
+    driver: local
+
+networks:
+  app-network:
+    driver: bridge
