--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
     "build": "tsc -p tsconfig.json",
     "studio": "yarn drizzle-kit studio",
     "start": "node dist/server.js",
-    "db:repair": "yarn drizzle-kit generate  --config=drizzle.config.ts && yarn drizzle-kit migrate --config=drizzle.config.ts && yarn drizzle-kit push && yarn drizzle-kit pull && yarn drizzle-kit check"
+    "db:repair": "yarn drizzle-kit generate  --config=drizzle.config.ts && yarn drizzle-kit migrate --config=drizzle.config.ts && yarn drizzle-kit push && yarn drizzle-kit pull && yarn drizzle-kit check",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +24,7 @@
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
-    "ioredis": "^5.7.0",
+    "ioredis": "5.7.0",
     "pg": "^8.16.3",
     "pg-pool": "^3.10.1",
     "postgres": "^3.4.7",
