--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-# VITE_APP_API_URL=http://localhost:4000
+VITE_APP_API_URL=http://localhost:4000
 
 # Production
-VITE_APP_API_URL=https://live-document-editor-intigly-assignment.onrender.com
+# VITE_APP_API_URL=https://live-document-editor-intigly-assignment.onrender.com
