Add .gitignore for environment variables, enhance socket presence management, and improve typing indicators in collaborative editing
	new file:   backend/.gitignore
	modified:   backend/src/db/client.ts
	modified:   backend/src/server.ts
	modified:   frontend/src/pages/Editor.tsx

--- a/backend/.env
+++ b/backend/.env
@@ -23,3 +23,8 @@ REDIS_DB=0
 REDIS_IS_TLS=false
 
 DB_IS_SSL=false
+
+
+# Production
+# REDIS_URL=rediss://red-d2sn1sur433s73frrov0:QGvg9wakJR6DgtSZSacbmu5k5IkwW9Ci@oregon-keyvalue.render.com:6379
+POSTGRES_DB_URL=postgresql://rtc_docs_user:1FsgcYZ1K3wQ5j5MSYvS5hw8x4ZmdRPv@dpg-d2sn0iggjchc73aic0cg-a.oregon-postgres.render.com/rtc_docs
