--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Logs
 logs
 *.log
+WARP.md
 /**/npm-debug.log*
 /**/yarn-debug.log*
 /**/yarn-error.log*
@@ -16,3 +17,5 @@ backend/dist
 dist-ssr  
 backend/.env
 frontend/.env
+
+./backend/.env
