Refactor document management and enhance frontend functionality
- Added a new route to fetch active document templates in the backend.
- Updated the .gitignore to include frontend appServer node_modules.
- Modified package.json to include new scripts for building and serving the frontend.
- Cleaned up unused imports and commented-out code in various frontend components.
- Improved document filtering and sorting logic in the Documents page.
- Enhanced user experience with informative messages for document search results.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "serve": "cd appServer && yarn && yarn run start",
+    "build-and-serve": "tsc -b && vite build && cd appServer && yarn && yarn run start",
     "lint": "eslint .",
     "preview": "vite preview"
   },
