--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@ frontend/node_modules
 backend/node_modules
 backend/drizzle
 
-frontend/dist
 backend/dist
 dist-ssr  
 backend/.env
 frontend/.env
+frontend/appServer/node_modules
 
 ./backend/.env
