--- a/frontend/appServer/package.json
+++ b/frontend/appServer/package.json
@@ -5,11 +5,12 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node app.mjs"
+    "start": "nodemon app.mjs"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "express": "^5.1.0"
+    "express": "4.21.2",
+    "nodemon": "^3.1.10"
   }
 }
